# ai-powered-multi-agent-workflow-automation-platform

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
backend/: Dockerfile  runs.json
backend/app/: __init__.py  main.py  worker.py
backend/app/agents/: base.py  code_execution.py  data_analysis.py  orchestrator.py  state.py  synthesizer.py  web_search.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: audit.py
backend/app/schemas/: runs.py
backend/app/services/: code_sandbox.py  cost_tracker.py  llm.py  memory.py  run_service.py  websocket_manager.py
backend/multi_agent_workflow_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_code_sandbox.py  test_orchestrator.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/lib/: api.ts
infra/: docker-compose.prod.yml
