[project]
name = "multi-agent-workflow-platform"
version = "0.1.0"
description = "AI-powered multi-agent workflow automation platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.32",
  "psycopg[binary]>=3.2.1",
  "celery[redis]>=5.4.0",
  "redis>=5.0.8",
  "httpx>=0.27.0",
  "openai>=1.40.0",
  "langchain>=0.2.14",
  "langgraph>=0.2.14",
  "pandas>=2.2.2",
  "matplotlib>=3.9.0",
  "chromadb>=0.5.5",
  "python-multipart>=0.0.9",
  "tiktoken>=0.7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.5.7"
]

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

